change for colleagues

--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -7,6 +7,6 @@
     <title>Colleagues</title>
 </head>
 <body>
-    <ul><a href="#">César</a></ul>
+    <ul><a href="cesar.html">César</a></ul>
 </body>
 </html>
