--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -7,6 +7,9 @@
     <title>Colleagues</title>
 </head>
 <body>
-    <ul><a href="cesar.html">Césarx</a></ul>
+    <ul>
+        <a href="cesar.html">Césarx</a>
+        <a href="adan.html">Adan</a>
+    </ul>
 </body>
 </html>
