--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <ul><a href="cesar.html">Césarx</a></ul>
+    <ul><a href="ferSostenes.html">Fernando Sóstenes</a></ul>
 </body>
 </html>
