--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -7,6 +7,6 @@
     <title>Colleagues</title>
 </head>
 <body>
-    <ul><a href="cesar.html">Césarx</a></ul>
+    <ul><a href="Mauricio.html">Mauricio Alva</a></ul>
 </body>
 </html>
