--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <ul><a href="cesar.html">Césarx</a></ul>
+    <ul><a href="octavio.html">Tavo</a></ul
     <ul><a href="adan.html">Adan</a></ul>
     <ul><a href="cesar.html">Césarx.</a></ul>
     <ul><a href="Mauricio.html">Mauricio Alva</a></ul>
