--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <ul><a href="cesar.html">Césarx</a></ul>
-    <ul><a href="octavio.html">Tavo</a></ul
+    <ul>
+        <a href="octavio.html">Tavo</a></ul
+        <a href="https://www.twitter.com/omd_pmp">twitter</a>
     <ul>
         <a href="cesar.html">Césarx</a>
         <a href="https://www.twitter.com/cesargtzyanez">twitter</a>
