add social network

--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -20,7 +20,10 @@
         <a href="emmanuel.html">Emmanuel</a>
     </ul>
     
-    <ul><a href="adan.html">Adan</a></ul>
+    <ul>
+        <a href="adan.html">Adan</a>
+        <a href="https://www.twitter.com/AdnCode">twitter</a>
+    </ul>
     <ul><a href="cesar.html">Césarx.</a></ul>
     <ul><a href="Mauricio.html">Mauricio Alva</a></ul>
 </body>
