--- a/colleagues/index.html
+++ b/colleagues/index.html
@@ -7,7 +7,7 @@
     <title>Colleagues</title>
 </head>
 <body>
-    <ul><a href="cesar.html">Césarx</a></ul>
+    <ul><a href="cesar.html">César</a></ul>
     <ul>
         <a href="ferSostenes.html">Fernando Sóstenes</a>
         <a href="https://www.facebook.com/">FB</a>
